further styling of left pokedex side

--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
     <section id="pokedex">
         <div id="left-part">
             <div id="buttons"></div>
-            <div id="screen"></div>
-            <div id="poke-number"></div>
+            <div id="screen">
+                <div id="display">
+                    image
+                </div>
+            </div>
+            <div id="poke-number">
+                counter
+            </div>
         </div>
         <div id="right-part">
-            <div id="search"></div>
+            <div id="search">
+                <input type="text" id="poke-search" placeholder="Search a pokemon...">
+            </div>
             <div id="info"></div>
         </div>
     </section>
