--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             </div>
         </div>
         <div id="right-part">
-            <div id="search">
+            <form id="search">
                 <input type="text" id="poke-search" placeholder="Search a pokemon...">
-            </div>
+                <input type="button" id="search-button" value="Search">
+            </form>
             <div id="info"></div>
         </div>
     </section>
