--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                 <input type="text" id="poke-search" placeholder="Search a pokemon...">
                 <input type="button" id="search-button" value="Search">
             </form>
-            <div id="info"></div>
+            <div id="info">
+                <div id="name">name</div>
+                <div id="moves">moves</div>
+            </div>
         </div>
     </section>
 
