basic working pokedex with full names image index and moves

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <div id="buttons"></div>
             <div id="screen">
                 <div id="display">
-                    image
+                    <img id="displayImage" src="" alt="">
                 </div>
             </div>
             <div id="poke-number">
-                counter
+                <h2>index n°</h2>
+                <p></p>
             </div>
         </div>
         <div id="right-part">
