--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div id="poke-number">
-                <h2>index n°</h2>
+                <h2>index</h2>
                 <p></p>
             </div>
         </div>
@@ -31,8 +31,8 @@
                 <input type="button" id="search-button" value="Search">
             </form>
             <div id="info">
-                <div id="name">name</div>
-                <div id="moves">moves</div>
+                <div id="name"></div>
+                <div id="moves"></div>
             </div>
         </div>
     </section>
