add useless buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     </section>
     <section id="pokedex">
         <div id="left-part">
-            <div id="buttons"></div>
+            <div id="buttons">
+                <div class="circle" id="grey">
+                    <div class="circle medium" id="blue"></div>
+                </div>
+                <div class="circle small" id="red"></div>
+                <div class="circle small" id="yellow"></div>
+                <div class="circle small" id="green"></div>
+            </div>
             <div id="screen">
                 <div id="display">
                     <img id="displayImage" src="" alt="">
