add types and make boxes empty when no matches found

--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
     <section id="pokedex">
         <div id="left-part">
             <div id="buttons">
-                <div class="circle" id="grey">
-                    <div class="circle medium" id="blue"></div>
+                <div class="circle grey">
+                    <div class="circle medium blue">
+                        <div class="glare"></div>
+                    </div>
                 </div>
-                <div class="circle small" id="red"></div>
-                <div class="circle small" id="yellow"></div>
-                <div class="circle small" id="green"></div>
+                <div class="circle small red"><div class="glare"></div></div>
+                <div class="circle small yellow"><div class="glare"></div></div>
+                <div class="circle small green"><div class="glare"></div></div>
             </div>
             <div id="screen">
+                <div id="tinydetails">
+                    <div class="circle xsmall red"></div>
+                    <div class="circle xsmall red"></div>
+                </div>
                 <div id="display">
                     <img id="displayImage" src="" alt="">
+                </div>
+                <div id="types">
                 </div>
             </div>
             <div id="poke-number">
